--- a/index.html
+++ b/index.html
@@ -4,10 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids School</title>
+    <script src="https://kit.fontawesome.com/27e7f6ea54.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/style.css">
 </head>
-<body>
-    <header></header>
+<body class="quicksand-font">
+    <header>
+        <nav class="flex">
+            <div class="nav-logo flex">
+                <div class="nav-img"><img src="./assets/logo.png" alt="logo"></div>
+                <h3 class="nav-title">AIS School</h3>
+            </div>
+            <div class="nav-links">
+                <ul class="links flex">
+                    <li class="items"><a href="#" style="color: orange; font-weight: bold;">Home</a></li>
+                    <li class="items"><a href="#" style="color: skyblue;">About</a></li>
+                    <li class="items"><a href="#" style="color: #05D4DF;">Facilities</a></li>
+                    <li class="items"><a href="#" style="color: #5D58EF;">Admission</a></li>
+                </ul>
+            </div>
+            <button class="nav-btn btn">Contact</button>
+            <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
+        </nav>
+    </header>
     <main></main>
     <footer></footer>
 </body>
