added banner section with responsiveness

--- a/index.html
+++ b/index.html
@@ -1,32 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Kids School</title>
-    <script src="https://kit.fontawesome.com/27e7f6ea54.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body class="quicksand-font">
+    <script
+      src="https://kit.fontawesome.com/27e7f6ea54.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body class="quicksand-font">
     <header>
-        <nav class="flex">
-            <div class="nav-logo flex">
-                <div class="nav-img"><img src="./assets/logo.png" alt="logo"></div>
-                <h3 class="nav-title">AIS School</h3>
-            </div>
-            <div class="nav-links">
-                <ul class="links flex">
-                    <li class="items"><a href="#" style="color: orange; font-weight: bold;">Home</a></li>
-                    <li class="items"><a href="#" style="color: skyblue;">About</a></li>
-                    <li class="items"><a href="#" style="color: #05D4DF;">Facilities</a></li>
-                    <li class="items"><a href="#" style="color: #5D58EF;">Admission</a></li>
-                </ul>
-            </div>
-            <button class="nav-btn btn">Contact</button>
-            <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
-        </nav>
+      <nav class="flex">
+        <div class="nav-logo flex">
+          <div class="nav-img"><img src="./assets/logo.png" alt="logo" /></div>
+          <h3 class="nav-title">AIS School</h3>
+        </div>
+        <div class="nav-links">
+          <ul class="links flex">
+            <li class="items">
+              <a href="#" style="color: orange; font-weight: bold">Home</a>
+            </li>
+            <li class="items"><a href="#" style="color: skyblue">About</a></li>
+            <li class="items">
+              <a href="#" style="color: #05d4df">Facilities</a>
+            </li>
+            <li class="items">
+              <a href="#" style="color: #5d58ef">Admission</a>
+            </li>
+          </ul>
+        </div>
+        <button class="nav-btn btn">Contact</button>
+        <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
+      </nav>
+      <!-- Banner Section Start -->
+      <section class="banner flex">
+        <div class="banner-content">
+          <h1 class="banner-title">
+            <span style="color: orange;">Empowering</span><br>students from small age
+            <span style="color: skyblue; font-weight: 700;">towards vision</span>
+          </h1>
+          <p class="banner-desc">
+            With the courage, Confidence, Creativity and Compassion to make
+            their Unique Contribution in a Diverse and Dynamic World.
+          </p>
+          <button class="btn banner-btn">Enroll Now</button>
+        </div>
+        <img src="./assets/hero-kids.png" alt="" />
+      </section>
     </header>
     <main></main>
     <footer></footer>
-</body>
+  </body>
 </html>
