added curriculum section with responsiveness

--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <section class="banner flex">
         <div class="banner-content">
           <h1 class="banner-title">
-            <span style="color: orange;">Empowering</span><br>students from small age
-            <span style="color: skyblue; font-weight: 700;">towards vision</span>
+            <span style="color: orange">Empowering</span><br />students from
+            small age
+            <span style="color: skyblue; font-weight: 700">towards vision</span>
           </h1>
           <p class="banner-desc">
             With the courage, Confidence, Creativity and Compassion to make
@@ -50,7 +51,48 @@
         <img src="./assets/hero-kids.png" alt="" />
       </section>
     </header>
-    <main></main>
+    <main>
+      <!-- Curriculum Section Start -->
+      <section class="curriculum">
+        <h2 class="section-title">Standard Curriculum</h2>
+        <div class="card-container grid">
+          <div class="card c1s">
+            <img src="./assets/kinder.png" alt="kinder" />
+            <h4 class="card-title t-color">Kinder (3-6) Years</h4>
+            <p class="card-desc raleway-font d-color">
+              This curriculum aims to foster a well-rounded development,
+              preparing children for a smooth transition into primary education
+            </p>
+            <a href="#" class="c1-color">Read More</a>
+          </div>
+          <div class="card c2s">
+            <img src="./assets/elementary.png" alt="elementary" />
+            <h4 class="card-title t-color">Elementary School</h4>
+            <p class="card-desc raleway-font d-color">
+              Elementary school aims to provide a supportive environment where
+              children can grow intellectually, socially, and emotionally,
+              laying the groundwork for lifelong learning and personal
+              development.
+            </p>
+            <a href="#" class="c2-color">Read More</a>
+          </div>
+          <div class="card c3s">
+            <img src="./assets/middle.png" alt="middle" />
+            <h4 class="card-title t-color">Middle (10-16) Years</h4>
+            <p class="card-desc raleway-font d-color">
+              Middle school serves as a critical phase where students grow more
+              independent, form their identities, and prepare for the challenges
+              of high school, both academically and socially.
+            </p>
+            <a href="#" class="c3-color">Read More</a>
+          </div>
+        </div>
+        <div class="card-btn flex">
+          <button><</button>
+          <button>></button>
+        </div>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
