--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       src="https://kit.fontawesome.com/27e7f6ea54.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="shortcut icon" href="https://cdn-icons-png.flaticon.com/512/167/167707.png" type="image/x-icon">
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body class="quicksand-font">
@@ -40,7 +41,7 @@
           <h1 class="banner-title">
             <span style="color: orange">Empowering</span><br />students from
             small age
-            <span style="color: skyblue; font-weight: 700">towards vision</span>
+            <span style="color: #01ACFD; font-weight: 700">towards vision</span>
           </h1>
           <p class="banner-desc">
             With the courage, Confidence, Creativity and Compassion to make
@@ -179,8 +180,7 @@
             At AIS, we are committed to providing a fun, safe, and enriching
             learning environment for children. Our programs are designed to
             spark curiosity, foster creativity, and build a strong foundation
-            for lifelong learning. Join us in empowering the next generation to
-            achieve their dreams and make a positive impact on the world.
+            for lifelong learning.
           </p>
         </div>
         <div class="footer-links">
