added announcement section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <button class="nav-btn btn">Contact</button>
         <button class="menu-btn"><i class="fa-solid fa-bars"></i></button>
       </nav>
+      <!-- Announcement Section -->
+      <marquee behavior="scroll" scrollamount="10" direction="left">Important Announcement: School will be closed on Friday!</marquee>
       <!-- Banner Section Start -->
       <section class="banner flex">
         <div class="banner-content">
